# idd-manuscripts

./: .gitignore  README.md  create_refs_notebook.sh  environment-basic.yml  environment.yml  gbd_env.yml  gbd_sunset.yml  pyproject.toml  setup_manuscript.sh  setup_project.sh
notebooks/: zotero_config.yaml
notebooks/GBD2023_DENV/: 00_references.qmd  01_text_statistics.qmd  02_figures.qmd  03_tables.qmd  get_gbd_data.ipynb
notebooks/test/: get_zotero_refs.ipynb  test.html  test.qmd
notebooks/test/test_manuscript/: index.qmd  prep_references.ipynb  zotero_items.json
scripts/: run_analysis.py
src/idd_manuscripts/: citation_functions.py  constants.py
src/idd_manuscripts/GBD2023_DENV/: README.md  _quarto.yml  manuscript.qmd  references.bib
src/idd_manuscripts/GBD2023_DENV/_manuscript/site_libs/bootstrap/: bootstrap-28c367784fd8ce2bc508522548ac7864.min.css
src/idd_manuscripts/analysis/: statistics.py
src/idd_manuscripts/data/: loaders.py
src/idd_manuscripts/visualization/: plots.py
