[tool.poetry]
name = "idd-manuscripts"
version = "0.1.0"
description = "IDD manuscripts analysis pipeline with automated document generation"
authors = ["Your Name <your.email@institution.edu>"]
readme = "README.md"
packages = [{include = "idd_manuscripts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"
numpy = "^1.24"
matplotlib = "^3.7"
seaborn = "^0.12"
plotly = "^5.14"
scipy = "^1.10"
jupyter = "^1.0"
python-docx = "^0.8.11"
statsmodels = "^0.14"
scikit-learn = "^1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.0"
pre-commit = "^3.0"
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.0"
sphinxcontrib-bibtex = "^2.5"
sphinx-book-theme = "^1.0.1"
myst-parser = "^2.0.0"
nbsphinx = "^0.9.0"
pyzotero = "^1.5.0"

[tool.poetry.scripts]
run-analysis = "idd_manuscripts.scripts.run_analysis:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
